# pde-opt

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  walkthrough.ipynb
.github/workflows/: style.yml
pdo/components/: __init__.py  functional.py  operator.py  variable.py
pdo/domain/: __init__.py  twod.py
pdo/optimisation/: __init__.py  base.py  descent.py
pdo/optimisation/callback/: __init__.py  monitor.py
pdo/problem/: __init__.py  poisson.py
